fix: canonical_key matching — Chateau/Verde Vale/Amapi unidades agora localizam parcelas (25/02/2026)

--- a/cdmp/index.html
+++ b/cdmp/index.html
@@ -224,18 +224,18 @@
   </div>
   <div style="display:flex;align-items:center;gap:12px">
     <button class="btn-extrato" onclick="document.getElementById('extrato-overlay').classList.add('open')">📋 Extrato de Alterações</button>
-    <div class="updated">Atualizado: 25/02/2026 15:20</div>
+    <div class="updated">Atualizado: 25/02/2026 15:30</div>
   </div>
 </div>
 
 <div class="stats">
   <div class="stat"><div class="n">26</div><div class="l">Total</div></div>
 
-  <div class="stat green"><div class="n">12</div><div class="l">Concluídos</div></div>
-  <div class="stat yellow"><div class="n">12</div><div class="l">Em Aberto</div></div>
+  <div class="stat green"><div class="n">10</div><div class="l">Concluídos</div></div>
+  <div class="stat yellow"><div class="n">14</div><div class="l">Em Aberto</div></div>
   <div class="stat red"><div class="n">2</div><div class="l">Vencidos</div></div>
   <div class="stat purple"><div class="n">0</div><div class="l">Jurídico</div></div>
-  <div class="stat"><div class="n">R$ 72,703</div><div class="l">Valor Total</div></div>
+  <div class="stat"><div class="n">R$ 75,480</div><div class="l">Valor Total</div></div>
 </div>
 
 
@@ -339,7 +339,7 @@
   </div>
   <div class="card-footer">
     <span>Total acordo: <strong>R$ 2.994,18</strong></span>
-    <span>Valor/parcela: <strong>R$ 748,54</strong></span>
+    <span>Valor/parcela: <strong>R$ 748,55</strong></span>
     <span>Período: 10/10/2025 a 13/01/2026</span>
     <span class="ver-mais">clique para análise ↑</span>
   </div>
@@ -350,8 +350,8 @@
       <div class="analytics-title">Resumo Financeiro</div>
       <div class="fin-grid">
         <div class="fin-item"><span class="fin-label">Total acordado</span><span class="fin-val">R$ 2.994,18</span></div>
-        <div class="fin-item"><span class="fin-label">Pago (4 parcelas)</span><span class="fin-val green">R$ 2.994,16</span></div>
-        <div class="fin-item"><span class="fin-label">Saldo pendente</span><span class="fin-val red">R$ 0,02</span></div>
+        <div class="fin-item"><span class="fin-label">Pago (4 parcelas)</span><span class="fin-val green">R$ 2.994,20</span></div>
+        <div class="fin-item"><span class="fin-label">Saldo pendente</span><span class="fin-val green">R$ 0,00</span></div>
         <div class="fin-item"><span class="fin-label">Progresso</span><span class="fin-val">100%</span></div>
       </div>
     </div>
@@ -1240,19 +1240,19 @@
   <div class="card-body">
     <div class="parcelas-row">
       <span class="row-label">Parcelas</span>
-      <div class="badges-wrap"><span class="badge-nao-localizado">⚠ Unidade não localizada na API</span></div>
-      <span class="prog-label">—</span>
+      <div class="badges-wrap"><span class="parc-badge p-pago" title="Parcela 1 — Pago em 05/12/2025">1</span><span class="parc-badge p-pago" title="Parcela 2 — Pago em 05/01/2026">2</span><span class="parc-badge p-pago" title="Parcela 3 — Pago em 05/02/2026">3</span><span class="parc-badge p-pendente" title="Parcela 4 — Pendente · Vcto: 05/03/2026">4</span><span class="parc-badge p-pendente" title="Parcela 5 — Pendente · Vcto: 05/04/2026">5</span><span class="parc-badge p-pendente" title="Parcela 6 — Pendente · Vcto: 05/05/2026">6</span><span class="parc-badge p-pendente" title="Parcela 7 — Pendente · Vcto: 05/06/2026">7</span><span class="parc-badge p-pendente" title="Parcela 8 — Pendente · Vcto: 05/07/2026">8</span><span class="parc-badge p-pendente" title="Parcela 9 — Pendente · Vcto: 05/08/2026">9</span><span class="parc-badge p-pendente" title="Parcela 10 — Pendente · Vcto: 05/09/2026">10</span><span class="parc-badge p-pendente" title="Parcela 11 — Pendente · Vcto: 05/10/2026">11</span><span class="parc-badge p-pendente" title="Parcela 12 — Pendente · Vcto: 05/11/2026">12</span><span class="parc-badge p-pendente" title="Parcela 13 — Pendente · Vcto: 05/12/2026">13</span><span class="parc-badge p-pendente" title="Parcela 14 — Pendente · Vcto: 05/01/2027">14</span><span class="parc-badge p-pendente" title="Parcela 15 — Pendente · Vcto: 05/02/2027">15</span></div>
+      <span class="prog-label">3/15</span>
     </div>
-    <div class="progress-bar"><div class="progress-fill prog-low" style="width:0%"></div></div>
+    <div class="progress-bar"><div class="progress-fill prog-low" style="width:20%"></div></div>
     <div class="boletos-row">
       <span class="row-label">Boletos abertos</span>
       <div class="boletos-wrap"><span class="boleto-none">Sem boletos em aberto</span></div>
     </div>
   </div>
   <div class="card-footer">
-    <span>Total acordo: <strong>—</strong></span>
-    <span>Valor/parcela: <strong>—</strong></span>
-    <span>Período: — a —</span>
+    <span>Total acordo: <strong>R$ 623,41</strong></span>
+    <span>Valor/parcela: <strong>R$ 41,56</strong></span>
+    <span>Período: 05/12/2025 a 05/02/2027</span>
     <span class="ver-mais">clique para análise ↑</span>
   </div>
   <div class="card-analytics">
@@ -1261,17 +1261,17 @@
     <div class="analytics-col">
       <div class="analytics-title">Resumo Financeiro</div>
       <div class="fin-grid">
-        <div class="fin-item"><span class="fin-label">Total acordado</span><span class="fin-val">—</span></div>
-        <div class="fin-item"><span class="fin-label">Pago (0 parcelas)</span><span class="fin-val green">R$ 0,00</span></div>
-        <div class="fin-item"><span class="fin-label">Saldo pendente</span><span class="fin-val green">R$ 0,00</span></div>
-        <div class="fin-item"><span class="fin-label">Progresso</span><span class="fin-val">0%</span></div>
+        <div class="fin-item"><span class="fin-label">Total acordado</span><span class="fin-val">R$ 623,41</span></div>
+        <div class="fin-item"><span class="fin-label">Pago (3 parcelas)</span><span class="fin-val green">R$ 124,68</span></div>
+        <div class="fin-item"><span class="fin-label">Saldo pendente</span><span class="fin-val red">R$ 498,73</span></div>
+        <div class="fin-item"><span class="fin-label">Progresso</span><span class="fin-val">20%</span></div>
       </div>
     </div>
   </div>
-  <div class="analytics-title" style="margin-top:14px">Parcelas (0 registros)</div>
+  <div class="analytics-title" style="margin-top:14px">Parcelas (15 registros)</div>
   <table class="an-table">
     <thead><tr><th>Nº</th><th>Vencimento / Pagamento</th><th>Valor</th><th>Status</th></tr></thead>
-    <tbody></tbody>
+    <tbody><tr><td class="tc">#1</td><td>05/12/2025</td><td class="tr mono">R$ 121,21</td><td><span class="st-badge st-pago">✓ Pago</span> <span style="color:var(--muted);font-size:10px">Pago 05/12/2025</span></td></tr><tr><td class="tc">#2</td><td>05/01/2026</td><td class="tr mono">R$ 121,22</td><td><span class="st-badge st-pago">✓ Pago</span> <span style="color:var(--muted);font-size:10px">Pago 05/01/2026</span></td></tr><tr><td class="tc">#3</td><td>05/02/2026</td><td class="tr mono">R$ 380,98</td><td><span class="st-badge st-pago">✓ Pago</span> <span style="color:var(--muted);font-size:10px">Pago 05/02/2026</span></td></tr><tr><td class="tc">#4</td><td>05/03/2026</td><td class="tr mono">R$ 41,56</td><td><span class="st-badge st-pendente">○ Pendente</span></td></tr><tr><td class="tc">#5</td><td>05/04/2026</td><td class="tr mono">R$ 41,56</td><td><span class="st-badge st-pendente">○ Pendente</span></td></tr><tr><td class="tc">#6</td><td>05/05/2026</td><td class="tr mono">R$ 41,56</td><td><span class="st-badge st-pendente">○ Pendente</span></td></tr><tr><td class="tc">#7</td><td>05/06/2026</td><td class="tr mono">R$ 41,56</td><td><span class="st-badge st-pendente">○ Pendente</span></td></tr><tr><td class="tc">#8</td><td>05/07/2026</td><td class="tr mono">R$ 41,56</td><td><span class="st-badge st-pendente">○ Pendente</span></td></tr><tr><td class="tc">#9</td><td>05/08/2026</td><td class="tr mono">R$ 41,56</td><td><span class="st-badge st-pendente">○ Pendente</span></td></tr><tr><td class="tc">#10</td><td>05/09/2026</td><td class="tr mono">R$ 41,56</td><td><span class="st-badge st-pendente">○ Pendente</span></td></tr><tr><td class="tc">#11</td><td>05/10/2026</td><td class="tr mono">R$ 41,56</td><td><span class="st-badge st-pendente">○ Pendente</span></td></tr><tr><td class="tc">#12</td><td>05/11/2026</td><td class="tr mono">R$ 41,56</td><td><span class="st-badge st-pendente">○ Pendente</span></td></tr><tr><td class="tc">#13</td><td>05/12/2026</td><td class="tr mono">R$ 41,56</td><td><span class="st-badge st-pendente">○ Pendente</span></td></tr><tr><td class="tc">#14</td><td>05/01/2027</td><td class="tr mono">R$ 41,56</td><td><span class="st-badge st-pendente">○ Pendente</span></td></tr><tr><td class="tc">#15</td><td>05/02/2027</td><td class="tr mono">R$ 41,56</td><td><span class="st-badge st-pendente">○ Pendente</span></td></tr></tbody>
   </table>
   <div class="analytics-title" style="margin-top:14px">Boletos em aberto · API LiveFacilities</div>
   <table class="an-table">
@@ -1394,7 +1394,7 @@
   </table>
 </div></div>
 </div>
-<div class="card card-ok" data-emp="1122 - CHATEAU CHENONCEAUX" data-status="card-ok" data-resp="giulia nunes" data-tipo="acordo_parcelado">
+<div class="card card-done" data-emp="1122 - CHATEAU CHENONCEAUX" data-status="card-done" data-resp="giulia nunes" data-tipo="acordo_parcelado">
   <div class="card-header clickable" onclick="toggleCard(this)">
     <div class="card-title">
       <span class="cd-badge">1122</span>
@@ -1411,19 +1411,19 @@
   <div class="card-body">
     <div class="parcelas-row">
       <span class="row-label">Parcelas</span>
-      <div class="badges-wrap"><span class="badge-nao-localizado">⚠ Unidade não localizada na API</span></div>
-      <span class="prog-label">—</span>
+      <div class="badges-wrap"><span class="parc-badge p-pago" title="Parcela 1 — Pago em 30/10/2025">1</span><span class="parc-badge p-pago" title="Parcela 2 — Pago em 02/12/2025">2</span></div>
+      <span class="prog-label">2/2</span>
     </div>
-    <div class="progress-bar"><div class="progress-fill prog-low" style="width:0%"></div></div>
+    <div class="progress-bar"><div class="progress-fill prog-done" style="width:100%"></div></div>
     <div class="boletos-row">
       <span class="row-label">Boletos abertos</span>
       <div class="boletos-wrap"><span class="boleto-none">Sem boletos em aberto</span></div>
     </div>
   </div>
   <div class="card-footer">
-    <span>Total acordo: <strong>—</strong></span>
-    <span>Valor/parcela: <strong>—</strong></span>
-    <span>Período: — a —</span>
+    <span>Total acordo: <strong>R$ 1.377,12</strong></span>
+    <span>Valor/parcela: <strong>R$ 688,56</strong></span>
+    <span>Período: 30/10/2025 a 02/12/2025</span>
     <span class="ver-mais">clique para análise ↑</span>
   </div>
   <div class="card-analytics">
@@ -1432,17 +1432,17 @@
     <div class="analytics-col">
       <div class="analytics-title">Resumo Financeiro</div>
       <div class="fin-grid">
-        <div class="fin-item"><span class="fin-label">Total acordado</span><span class="fin-val">—</span></div>
-        <div class="fin-item"><span class="fin-label">Pago (0 parcelas)</span><span class="fin-val green">R$ 0,00</span></div>
+        <div class="fin-item"><span class="fin-label">Total acordado</span><span class="fin-val">R$ 1.377,12</span></div>
+        <div class="fin-item"><span class="fin-label">Pago (2 parcelas)</span><span class="fin-val green">R$ 1.377,12</span></div>
         <div class="fin-item"><span class="fin-label">Saldo pendente</span><span class="fin-val green">R$ 0,00</span></div>
-        <div class="fin-item"><span class="fin-label">Progresso</span><span class="fin-val">0%</span></div>
+        <div class="fin-item"><span class="fin-label">Progresso</span><span class="fin-val">100%</span></div>
       </div>
     </div>
   </div>
-  <div class="analytics-title" style="margin-top:14px">Parcelas (0 registros)</div>
+  <div class="analytics-title" style="margin-top:14px">Parcelas (2 registros)</div>
   <table class="an-table">
     <thead><tr><th>Nº</th><th>Vencimento / Pagamento</th><th>Valor</th><th>Status</th></tr></thead>
-    <tbody></tbody>
+    <tbody><tr><td class="tc">#1</td><td>30/10/2025</td><td class="tr mono">R$ 608,33</td><td><span class="st-badge st-pago">✓ Pago</span> <span style="color:var(--muted);font-size:10px">Pago 30/10/2025</span></td></tr><tr><td class="tc">#2</td><td>02/12/2025</td><td class="tr mono">R$ 768,79</td><td><span class="st-badge st-pago">✓ Pago</span> <span style="color:var(--muted);font-size:10px">Pago 02/12/2025</span></td></tr></tbody>
   </table>
   <div class="analytics-title" style="margin-top:14px">Boletos em aberto · API LiveFacilities</div>
   <table class="an-table">
@@ -1582,19 +1582,19 @@
   <div class="card-body">
     <div class="parcelas-row">
       <span class="row-label">Parcelas</span>
-      <div class="badges-wrap"><span class="badge-nao-localizado">⚠ Unidade não localizada na API</span></div>
-      <span class="prog-label">—</span>
+      <div class="badges-wrap"><span class="parc-badge p-pago" title="Parcela 1 — Pago em 13/02/2026">1</span><span class="parc-badge p-pendente" title="Parcela 2 — Pendente · Vcto: 13/03/2026">2</span><span class="parc-badge p-pendente" title="Parcela 3 — Pendente · Vcto: 13/04/2026">3</span><span class="parc-badge p-pendente" title="Parcela 4 — Pendente · Vcto: 13/05/2026">4</span><span class="parc-badge p-pendente" title="Parcela 5 — Pendente · Vcto: 13/06/2026">5</span><span class="parc-badge p-pendente" title="Parcela 6 — Pendente · Vcto: 13/07/2026">6</span><span class="parc-badge p-pendente" title="Parcela 7 — Pendente · Vcto: 13/08/2026">7</span><span class="parc-badge p-pendente" title="Parcela 8 — Pendente · Vcto: 13/09/2026">8</span><span class="parc-badge p-pendente" title="Parcela 9 — Pendente · Vcto: 13/10/2026">9</span></div>
+      <span class="prog-label">1/9</span>
     </div>
-    <div class="progress-bar"><div class="progress-fill prog-low" style="width:0%"></div></div>
+    <div class="progress-bar"><div class="progress-fill prog-low" style="width:11%"></div></div>
     <div class="boletos-row">
       <span class="row-label">Boletos abertos</span>
       <div class="boletos-wrap"><span class="boleto-none">Sem boletos em aberto</span></div>
     </div>
   </div>
   <div class="card-footer">
-    <span>Total acordo: <strong>—</strong></span>
-    <span>Valor/parcela: <strong>—</strong></span>
-    <span>Período: — a —</span>
+    <span>Total acordo: <strong>R$ 776,53</strong></span>
+    <span>Valor/parcela: <strong>R$ 86,28</strong></span>
+    <span>Período: 13/02/2026 a 13/10/2026</span>
     <span class="ver-mais">clique para análise ↑</span>
   </div>
   <div class="card-analytics">
@@ -1603,17 +1603,17 @@
     <div class="analytics-col">
       <div class="analytics-title">Resumo Financeiro</div>
       <div class="fin-grid">
-        <div class="fin-item"><span class="fin-label">Total acordado</span><span class="fin-val">—</span></div>
-        <div class="fin-item"><span class="fin-label">Pago (0 parcelas)</span><span class="fin-val green">R$ 0,00</span></div>
-        <div class="fin-item"><span class="fin-label">Saldo pendente</span><span class="fin-val green">R$ 0,00</span></div>
-        <div class="fin-item"><span class="fin-label">Progresso</span><span class="fin-val">0%</span></div>
+        <div class="fin-item"><span class="fin-label">Total acordado</span><span class="fin-val">R$ 776,53</span></div>
+        <div class="fin-item"><span class="fin-label">Pago (1 parcelas)</span><span class="fin-val green">R$ 86,28</span></div>
+        <div class="fin-item"><span class="fin-label">Saldo pendente</span><span class="fin-val red">R$ 690,25</span></div>
+        <div class="fin-item"><span class="fin-label">Progresso</span><span class="fin-val">11%</span></div>
       </div>
     </div>
   </div>
-  <div class="analytics-title" style="margin-top:14px">Parcelas (0 registros)</div>
+  <div class="analytics-title" style="margin-top:14px">Parcelas (9 registros)</div>
   <table class="an-table">
     <thead><tr><th>Nº</th><th>Vencimento / Pagamento</th><th>Valor</th><th>Status</th></tr></thead>
-    <tbody></tbody>
+    <tbody><tr><td class="tc">#1</td><td>13/02/2026</td><td class="tr mono">R$ 776,53</td><td><span class="st-badge st-pago">✓ Pago</span> <span style="color:var(--muted);font-size:10px">Pago 13/02/2026</span></td></tr><tr><td class="tc">#2</td><td>13/03/2026</td><td class="tr mono">R$ 86,28</td><td><span class="st-badge st-pendente">○ Pendente</span></td></tr><tr><td class="tc">#3</td><td>13/04/2026</td><td class="tr mono">R$ 86,28</td><td><span class="st-badge st-pendente">○ Pendente</span></td></tr><tr><td class="tc">#4</td><td>13/05/2026</td><td class="tr mono">R$ 86,28</td><td><span class="st-badge st-pendente">○ Pendente</span></td></tr><tr><td class="tc">#5</td><td>13/06/2026</td><td class="tr mono">R$ 86,28</td><td><span class="st-badge st-pendente">○ Pendente</span></td></tr><tr><td class="tc">#6</td><td>13/07/2026</td><td class="tr mono">R$ 86,28</td><td><span class="st-badge st-pendente">○ Pendente</span></td></tr><tr><td class="tc">#7</td><td>13/08/2026</td><td class="tr mono">R$ 86,28</td><td><span class="st-badge st-pendente">○ Pendente</span></td></tr><tr><td class="tc">#8</td><td>13/09/2026</td><td class="tr mono">R$ 86,28</td><td><span class="st-badge st-pendente">○ Pendente</span></td></tr><tr><td class="tc">#9</td><td>13/10/2026</td><td class="tr mono">R$ 86,28</td><td><span class="st-badge st-pendente">○ Pendente</span></td></tr></tbody>
   </table>
   <div class="analytics-title" style="margin-top:14px">Boletos em aberto · API LiveFacilities</div>
   <table class="an-table">
@@ -1841,7 +1841,7 @@ document.addEventListener('keydown', function(e) {
     <div class="extrato-header">
       <div>
         <h2>📋 Extrato de Alterações — CDMP</h2>
-        <span>141 boletos · 0 novo(s) · 0 recém pago(s) · últimos 30 dias</span>
+        <span>167 boletos · 26 novo(s) · 0 recém pago(s) · últimos 30 dias</span>
       </div>
       <button class="extrato-close" onclick="closeExtrato()">✕</button>
     </div>
